--- a/PlantManiaGame/Base.lproj/Main.storyboard
+++ b/PlantManiaGame/Base.lproj/Main.storyboard
@@ -394,11 +394,34 @@
                                     <segue destination="4PY-dF-9Z6" kind="unwind" unwindAction="cancel:" id="aDF-fs-JRe"/>
                                 </connections>
                             </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2oA-IV-aYG">
+                                <rect key="frame" x="16" y="84" width="343" height="443"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.57820371280920624" green="0.66666668653488159" blue="0.64592775729867236" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Llh-aa-ddQ">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="plantCell" id="C5U-D6-hw9">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                        <size key="customSize" width="100" height="100"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="j1L-I3-wwe"/>
                     </view>
                     <connections>
+                        <outlet property="collectionView" destination="2oA-IV-aYG" id="LwU-0B-4j6"/>
                         <outlet property="plant_image" destination="Cai-IR-mfo" id="ac6-ZF-egR"/>
                         <outlet property="plant_name" destination="rAu-FM-0Dt" id="ibH-ke-WLv"/>
                         <outlet property="plant_number" destination="ttz-pB-OMN" id="VaO-w5-I6d"/>
@@ -516,7 +539,7 @@
         <image name="plant2" width="512" height="512"/>
         <image name="plant3" width="512" height="512"/>
         <image name="seed" width="648" height="182"/>
-        <image name="sky" width="153.60000610351562" height="86.400001525878906"/>
+        <image name="sky" width="640" height="360"/>
         <image name="store" width="948" height="1682"/>
         <image name="store_button" width="1024" height="1024"/>
         <image name="sunflower-seed-clipart-1" width="500" height="500"/>
